# ROS-GridWorld-RL-with-Obstacles

./: README.md
.docker/: Dockerfile  build_image.sh  run_user.sh
gridworld_agent/: CMakeLists.txt  package.xml
gridworld_agent/scripts/: node_01.py
gridworld_agent/src/: grid_world_env.py  moving_obstacles.py  obstacle_clustering.py  reward_shaping.py  training_utils.py
